<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#070A52"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="350dp"
        android:layout_height="730dp"
        app:cardBackgroundColor="#A6D0DD"
        app:cardCornerRadius="90dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageButton
                android:id="@+id/prev_button"
                android:layout_width="98dp"
                android:layout_height="94dp"
                android:layout_gravity="bottom|left"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="72dp"
                android:background="?attr/selectableItemBackground"
                android:backgroundTint="#DFD2D1"
                android:contentDescription="@string/prev_button_description"
                android:src="@drawable/baseline_keyboard_arrow_right_black_18dp"
                android:text="@string/prev_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/next_button"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/gridLayout2"
                app:layout_constraintVertical_bias="0.928"
                tools:layout_conversion_absoluteHeight="90dp"
                tools:layout_conversion_absoluteWidth="90dp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:background="#F9E2AF"
                android:gravity="center"
                android:padding="3dp"
                android:text="@string/quiz_app"
                android:textSize="34sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="HardcodedText,MissingConstraints"
                tools:layout_conversion_absoluteHeight="50dp"
                tools:layout_conversion_absoluteWidth="268dp" />

            <ImageView
                android:id="@+id/myimage"
                android:layout_width="300dp"
                android:layout_height="250dp"
                android:layout_marginBottom="216dp"
                android:contentDescription="@string/myimage_description"
                android:src="@drawable/f1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.9"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_conversion_absoluteHeight="250dp"
                tools:layout_conversion_absoluteWidth="250dp" />

            <TextView
                android:id="@+id/answer_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="#B8621B"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/a"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/myimage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.567"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:layout_constraintVertical_bias="0.0"
                tools:layout_conversion_absoluteHeight="47dp"
                tools:layout_conversion_absoluteWidth="246dp" />

            <androidx.gridlayout.widget.GridLayout
                android:id="@+id/gridLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:padding="20dp"
                app:columnCount="2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.093"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/myimage"
                app:layout_constraintVertical_bias="0.0"
                app:rowCount="1"
                tools:ignore="MissingClass,MissingConstraints"
                tools:layout_conversion_absoluteHeight="60dp"
                tools:layout_conversion_absoluteWidth="240dp">

                <Button
                    android:id="@+id/true_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#5BD91B"
                    android:contentDescription="@string/true_button_description"
                    android:foreground="?attr/selectableItemBackground"
                    android:text="@string/true_text"
                    android:textSize="20sp"
                    app:layout_column="0"
                    app:layout_gravity="left"
                    app:layout_row="0"
                    tools:layout_conversion_absoluteHeight="0dp"
                    tools:layout_conversion_absoluteWidth="0dp"
                    tools:layout_editor_absoluteX="86dp"
                    tools:layout_editor_absoluteY="484dp" />

                <Button
                    android:id="@+id/false_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#E33328"
                    android:contentDescription="@string/false_button_description"
                    android:foreground="?attr/selectableItemBackground"
                    android:text="@string/false_text"
                    android:textSize="20sp"
                    app:layout_column="1"
                    app:layout_gravity="right"
                    app:layout_row="0"
                    tools:layout_conversion_absoluteHeight="0dp"
                    tools:layout_conversion_absoluteWidth="0dp"
                    tools:layout_editor_absoluteX="86dp"
                    tools:layout_editor_absoluteY="484dp" />
            </androidx.gridlayout.widget.GridLayout>

            <ImageButton
                android:id="@+id/next_button"
                android:layout_width="96dp"
                android:layout_height="93dp"
                android:layout_gravity="bottom|right"
                android:layout_marginTop="11dp"
                android:layout_marginEnd="28dp"
                android:background="?attr/selectableItemBackground"
                android:backgroundTint="#DFD2D1"
                android:contentDescription="@string/next_button_description"
                android:src="@drawable/baseline_keyboard_arrow_left_black_18dp"
                android:text="@string/next_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/gridLayout2"
                app:layout_constraintVertical_bias="0.0"
                tools:layout_conversion_absoluteHeight="90dp"
                tools:layout_conversion_absoluteWidth="90dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>